# louis

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  SUBMISSION.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
demo/: README.md  presenter.html
demo/outputs/: verbatim_outputs.md
docs/: dot1l-dossier.html
kb/: CONVENTIONS.md  _index.json  community_signal.md  index.md  log.md  state.md
kb/experiments/: DOT1L_RA_Treg_sparing_window.md  DOT1L_rheumatoid_arthritis.md  HDAC7_ulcerative_colitis.md
kb/wiki/diseases/: Crohns disease.md  Hashimotos thyroiditis.md  age-related macular degeneration.md  ankylosing spondylitis.md  asthma.md  atopic eczema.md  autoimmune disease.md  celiac disease.md  chronic kidney disease.md  coronary artery disease.md  inflammatory bowel disease.md  multiple sclerosis.md  psoriasis.md  rheumatoid arthritis.md  systemic lupus erythematosus.md  type 1 diabetes.md  (+2 more)
louis/: __init__.py  assistant.py  community.py  core.py  enrich.py  harvest.py  kb.py  kb_index.py  launch.py  mcp_server.py  reddit.py  slack_app.py
mcpb/: main.py  manifest.json
scripts/: build_kb_index.py  build_mcpb.py  build_skill.py  download_data.py  fig_pan_autoimmune.py  fig_th2_hub.py  figstyle.py  opportunity_map.py  positive_control.py  reset_lab_knowledge.py
site/: index.html
skill/: INSTALL.md  SKILL.md
slack/: SETUP.md  manifest.json  slack.env.example
tcell_targets/: __init__.py  assistant.py  bluesky.py  community.py  core.py  enrich.py  harvest.py  kb.py  kb_index.py  mcp_server.py  reddit.py  slack_app.py
tests/: test_community_filter.py  test_demo_invariants.py
(+214 files in other folders)
