[project]
name = "tcell-target-explorer"
version = "0.2.0"
description = "MCP + engine: trust-ranked CD4+ T-cell drug targets from genome-scale Perturb-seq, inside Claude."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.0",
    "mcp>=1.2",
]

[project.optional-dependencies]
# Local Streamlit visual browser + its in-app Claude Q&A (needs ANTHROPIC_API_KEY).
app = ["streamlit>=1.50", "altair>=5.0", "anthropic>=0.40"]

[project.scripts]
tcell-targets-mcp = "tcell_targets.mcp_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tcell_targets"]
