[project]
name = "louis"
version = "0.2.0"
description = "MCP + engine: trust-ranked CD4+ T-cell drug targets from genome-scale Perturb-seq, inside Claude."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.0",
    "mcp>=1.2",
]

[project.optional-dependencies]
# Local Streamlit visual browser + its in-app Claude Q&A (needs ANTHROPIC_API_KEY).
app = ["streamlit>=1.50", "altair>=5.0", "anthropic>=0.40"]
# Slack bot surface (Socket Mode — no hosting). NL answers also want anthropic.
slack = ["slack-bolt>=1.18", "anthropic>=0.40", "certifi"]

[project.scripts]
louis-mcp = "louis.mcp_server:main"
louis-slack = "louis.slack_app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["louis"]
